Montando a tabela com os dados fornecidos

--- a/SoftwareEstatistica.Web/Views/Qualitativas/Ordinal.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Ordinal.cshtml
@@ -55,7 +55,7 @@
                         style: "padding: 0 15px",
                         html: [ $("<div>",{
                                     class: "col s8 offset-s2 areaDados",
-                                    style: "display: none;",
+                                    style: "display: none; max-height: 500px; overflow:auto;",
                                     html:  [data]
                                 }) ]
                     }));
