--- a/SoftwareEstatistica.Web/Views/Quantitativas/Rol.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/Rol.cshtml
@@ -1,7 +1,7 @@
 @{ Layout = null; }
 
 <div class="col s10 offset-s1">
-    <h5 class="left">Rol</h5>
+    <h5 class="left">Dados ordenados</h5>
     <table class="highlight" id="dadosOrdenados" style="margin-bottom: 30px"></table>
 </div>
 
