--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
@@ -46,7 +46,7 @@
     <div id="rol" class="col s8 offset-s2 areaDados" style="display: none;"></div> 
 </div>
 <div class="row center" style="padding: 0 10px">
-    <div id="tabela" class="col s8 offset-s2 areaDados" style="display: none;"></div>   
+    <div id="tabela" class="col s8 offset-s2 areaDados" style="display: none; max-height: 500px; overflow:auto;"></div>   
 </div>
 @section Scripts{
     <script type="text/javascript">
