--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
@@ -10,7 +10,7 @@
             <td>FrA</td>
             <td>FrAP</td>
         </th>
-
+        <tbody></tbody>
     </table>
 </div>    
 <script>
@@ -32,5 +32,23 @@
         FrA += item['Fr'];
         item['FrA'] = FrA;
         item['FrAP'] = ((FrA*100)/dadosOrdenados.length).toFixed(2);
+
+        $("#dadosOrdenados tbody").append($("<tr>",{
+            html: [ $("<td>",{
+                        html: [item.Vap]
+                    }),
+                    $("<td>",{
+                        html: [item.Fr]
+                    }),
+                    $("<td>",{
+                        html: [item.FrP]
+                    }),
+                    $("<td>",{
+                        html: [item.FrA]
+                    }),
+                    $("<td>",{
+                        html: [item.FrAP]
+                    })]
+        }));
     });
 </script>  
