--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
@@ -91,7 +91,7 @@
 
             $.get(url, {
                 jsonDadosColetados: JSON.stringify(dadosColetados),
-                ordenar: ""
+                ordenar: $("input[name=radioTipoQualitativa]:checked").val() == "N" ? "S" : ""
             }).done(function(data){
                 $(".rowAdicionada").remove();
                 
