Encapsulando logica javascript e renomeando controllers e views

--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -74,7 +74,11 @@
 </ul>
 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
-<div id="corpoSite"></div>
+<div id="corpoSite" class="height">
+  <div class="center alinhaVerticalmente">
+    <i class="large material-icons" style="color: #37474f;">trending_up</i>
+  </div>
+</div>
 
 @section Scripts{
   <script type="text/javascript" src="~/js/sideNav.js"></script>
