--- a/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
+++ b/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html class="height">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,11 +9,12 @@
     <link type="text/css" rel="stylesheet" href="~/lib/materialize/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="~/css/site.css"/>
 </head>
-<body>
+<body class="height">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="~/lib/materialize/js/materialize.js"></script>
     <script type="text/javascript" src="~/js/loading.js"></script>
+    <script type="text/javascript" src="~/js/frequencias.js"></script>
     
     @RenderBody()
 
