Corrigindo exibição do gráfico na tela

--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
 
 <div id="corpoSite" class="height">
   <div class="center alinhaVerticalmente">
-    <i class="large material-icons" style="color: #37474f;">trending_up</i>
+    <i class="large material-icons" style="color: #37474f; font-size: 40rem;">trending_up</i>
   </div>
 </div>
 
