--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -63,8 +63,8 @@
         <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
         <div class="collapsible-body blue-grey darken-1">
           <ul>
-            <li><a id="varDiscreta" href="#!" class="white-text">Discreta</a></li>
-            <li><a href="#!" class="white-text">Contínua</a></li>
+            <li><a id="varDiscreta" href="#Discreta" class="white-text">Discreta</a></li>
+            <li><a id="varContinua" href="#Continua" class="white-text">Contínua</a></li>
           </ul>
         </div>
       </li>
