Separando funções e começando a montar o gráfico

--- a/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
@@ -1,31 +1,32 @@
-<canvas id="myChart" width="400" height="400"></canvas>
+<canvas id="myChart"></canvas>
 
 @section Scripts{
     <script>
         var ctx = document.getElementById("myChart").getContext("2d"),
-        myChart = new Chart(ctx, {
-            type: 'bar',
+        dados = JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')),
+        colors = ['rgba(255, 99, 132, 0.2)',     'rgba(54, 162, 235, 0.2)',  'rgba(255, 206, 86, 0.2)',
+                  'rgba(75, 192, 192, 0.2)',     'rgba(153, 102, 255, 0.2)', 'rgba(255, 159, 64, 0.2)'],
+        borderColors = ['rgba(255,99,132,1)',    'rgba(54, 162, 235, 1)',    'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)', 'rgba(153, 102, 255, 1)',   'rgba(255, 159, 64, 1)'],
+        coresSorteadas = [], bordasSorteadas = [];
+
+        dados.Quantidades.forEach(function(){
+            let aleatorio = Math.floor(Math.random() * (5 - 0)) + 0;
+            coresSorteadas.push(colors[aleatorio]); 
+            bordasSorteadas.push(colors[aleatorio]);
+        });
+
+        console.log(dados);
+        
+        var myChart = new Chart(ctx, {
+            type: 'pie',
             data: {
-                labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+                labels: dados.Variaveis,
                 datasets: [{
                     label: '# of Votes',
-                    data: [12, 19, 3, 5, 2, 3],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255,99,132,1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
+                    data: dados.Quantidades,
+                    backgroundColor: coresSorteadas,
+                    borderColor: bordasSorteadas,
                     borderWidth: 1
                 }]
             },
