--- a/SoftwareEstatistica.Web/Views/Qualitativas/Rol.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Rol.cshtml
@@ -40,14 +40,18 @@
         }));
 
        $.get("/Qualitativas/Grafico",{
-            jsonDados: JSON.stringify(dadosOrdenados)
+            jsonDadosColetados: JSON.stringify(montaInformacoesGrafico(dadosOrdenados)).replace(/&quot;/g,'"')
         }).success(function(dataGrafico){
             $("#resultados").parent().append($("<div>",{
                 class: "row center rowAdicionada",
                 html: [ $("<div>",{
                             class: "col s8 offset-s2 areaDados",
-                            style: "padding: 0 15px; margin-top: 20px;",
-                            html: [dataGrafico]
+                            style: "padding: 15px 15px; margin-top: 20px;",
+                            html: [$("<h4>",{
+                                        style: "text-align: left",
+                                        html: ["Gráfico"]
+                                    }),
+                                    dataGrafico]
                         })]
             }));
         }).error(function(xhr){
