--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/MediaModaMediana.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/MediaModaMediana.cshtml
@@ -1,59 +1,5 @@
 @section Scripts{
     <script>
-        var dadosColetados = calculaFrequencias(String('@ViewBag.Dados'.replace(/&quot;/g,'"'))),
-            moda,arrayModa,media,mediana;
-    
-        //Moda
-        dadosColetados.forEach(function(dado){
-            media += dado;
-    
-            if(arrayModa.length == 0)
-                arrayModa.push({
-                    numero: dado,
-                    quantidade: 1
-                });
-            else
-                arrayModa.forEach(function(item){
-                    if(item.numero == dado)
-                        item.numero++;
-                    else
-                        arrayModa.push({
-                            numero: dado,
-                            quantidade: 1
-                        });
-                });
-            
-            var acm = 0;
-            arrayModa.forEach(function(item,index){
-                if(index == 0)
-                    moda = item;
-                else if(item > moda)
-                    moda = item;
-                
-                if(item == moda)
-                    acm++;            
-            });
-    
-            if(acm == arrayModa.length)
-                modal = "Não tem moda";
-        });
-    
-        //Media
-        media = media / dadosColetados.length;
-    
-        //Mediana 
-        if("@ViewBag.tipo" == "C"){
-        
-        }else{
-            var ve = arrayModa.length;
-    
-            if(ve % 2 == 0){
-                var posicao = dadosColetados[dadosColetados.length - 1].FrA / 2,
-                    vlr1 = dadosColetados[posicao],
-                    vlr2 = vlr1 + 1;
-
-                mediana = vlr1 + vlr2
-            }
-        }
+        var objeto = calculaMediaModaMediana(String('@ViewBag.Dados'.replace(/&quot;/g,'"')));
     </script>
 }
