--- a/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
+++ b/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="~/lib/materialize/js/materialize.js"></script>
     <script type="text/javascript" src="~/js/loading.js"></script>
-    <script type="text/javascript" src="~/js/frequencias.js"></script>
+    <script type="text/javascript" src="~/js/funcoes.js"></script>
     
     @RenderBody()
 
