--- a/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
@@ -1,58 +1,9 @@
-<canvas id="myChart"></canvas>
+<canvas id="graficoPizza"></canvas>
 
 @section Scripts{
     <script>
-        var ctx = document.getElementById("myChart").getContext("2d"),
-        dados = JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')),
-        coresSorteadas = [], ultimaCor;
+        var dados = JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"'));
 
-        dados.Variaveis.forEach(function(item,index){
-            let num = Math.round(0xffffff * Math.random()),
-                r = num >> 16,
-                g = num >> 8 & 255,
-                b = num & 255;
-            if(index != 0)
-                do{
-                    num = Math.round(0xffffff * Math.random());
-                    r = num >> 16;
-                    g = num >> 8 & 255;
-                    b = num & 255;
-                }while(r == ultimaCor.r && g == ultimaCor.g && b == ultimaCor.b);
-
-            coresSorteadas.push("rgba(" + r + ", " + g + ", " + b + ",0.4)");
-
-            ultimaCor = {
-                r: r,
-                g: g,
-                b: b
-            };
-        });
-
-        dados.Quantidades.forEach(function(item, index){
-            coresSorteadas.push(coresSorteadas[index]); 
-        });
-
-        var myChart = new Chart(ctx, {
-            type: 'pie',
-            data: {
-                labels: dados.Variaveis,
-                datasets: [{
-                    label: '# of Votes',
-                    data: dados.Quantidades,
-                    backgroundColor: coresSorteadas,
-                    borderColor: coresSorteadas,
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero:true
-                        }
-                    }]
-                }
-            }
-        });
+        montaGrafico('pie', dados, document.getElementById("graficoPizza").getContext("2d"));
     </script>
 }
