--- a/SoftwareEstatistica.Web/Views/Quantitativas/GraficoDiscretas.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/GraficoDiscretas.cshtml
@@ -2,8 +2,8 @@
 
 @section Scripts{
     <script>
-        var dadosGrafico = montaInformacoesGrafico(JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"'))),
-
-        montaGrafico('bar', dadosGrafico, document.getElementById("graficoBarrasEspacadas").getContext("2d"));
+        var dadosGrafico = montaInformacoesGrafico(JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')));
+        
+        montaGrafico("bar", dadosGrafico, document.getElementById("graficoBarrasEspacadas").getContext("2d"), $("#varPesquisada").val());
     </script>
 }
