--- a/SoftwareEstatistica.Web/Views/Qualitativas/Rol.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Rol.cshtml
@@ -27,7 +27,7 @@
     });
 
     $.get("/QualitativasQuantitativas/Tabela",{
-        jsonDadosColetados: JSON.stringify(dadosOrdenados)
+        jsonDadosColetados: JSON.stringify(calculaFrequencias(dadosOrdenados))
     }).done(function(data){
         $("#resultados").parent().parent().append($("<div>",{
             class: "row center rowAdicionada",
