--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
@@ -7,9 +7,9 @@
             <tr>
                 <td>VaP</td>
                 <td>Fr</td>
-                <td>FrP</td>
+                <td>Fr%</td>
                 <td>FrA</td>
-                <td>FrAP</td>
+                <td>FrA%</td>
             </tr>
         </thead>
         <tbody></tbody>
