--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
@@ -95,7 +95,7 @@
                 frequencia = calculaFrequenciasContinua(dadosColetados.sort(function(a, b){return a-b}));
                 dadosPGrafico = [];
                 frequencia.forEach(function(dado){
-                    for(var i = 0; i <= dado.Fr; i++){
+                    for(var i = 0; i < dado.Fr; i++){
                         dadosPGrafico.push(dado.Var);
                     }
                 });
